# resume-agent-template-engine

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CI_FIXES.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOY.md  Dockerfile  Dockerfile.cloudflare  FUTURE_IMPROVEMENTS.md  LICENSE  PERFORMANCE.md  QUICKSTART.md  README.md  SCALING_GUIDE.md  SECURITY.md  START_HERE.md  TEMPLATE_DEVELOPMENT_GUIDE.md  api.py  app.py  build.sh  check-status.sh  cli.py  debug_import.py  demo_error_system.py  docker-compose.dev.yml  docker-compose.load-test-cached.yml  docker-compose.load-test.yml  docker-compose.yml  example_usage.py  gunicorn.conf.py  nginx.conf  pyproject.toml  requirements-dev.txt  requirements.txt  resume_template_editing.py  ruff.toml  run.py  setup-dev.sh  (+2 more)
.github/workflows/: ci.yml  deploy-cloudflare.yml
cloudflare/: package-lock.json  package.json  tsconfig.json  wrangler.jsonc
cloudflare/src/: index.ts
config/: stress_test_config.yaml  template_engine.yaml  ui_config.py
docs/: STRESS_TESTING_GUIDE.md
resume-engine-workers/: package-lock.json  package.json  tsconfig.json  wrangler.toml
resume-engine-workers/src/: index.ts
resume-engine-workers/src/cache/: document-cache.ts
resume-engine-workers/src/docx/: docx-generator.ts
src/: stress_test_metrics_high_volume_concurrent_medium_20250601_182742.json
src/resume_agent_template_engine/: __init__.py  __main__.py  app.py  cli.py  run.py
templates/: classic.tex
tests/: __init__.py  conftest.py  pytest.ini  test_api.py
tests/e2e/: __init__.py  test_api_endpoints.py  test_docx_export.py
tests/fixtures/: __init__.py  sample_data.py
tests/integration/: __init__.py  test_template_workflow.py
tests/load/: __init__.py  test_load_performance.py
tests/stress/: stress_config_loader.py  test_performance_stress.py
tests/unit/: __init__.py  test_api.py  test_cli.py  test_cli_docx.py  test_error_handling.py  test_exceptions.py  test_interface_docx_default.py  test_pdf_generation.py  test_schema_generator.py  test_template_engine.py  test_template_manager.py  test_validation.py
(+95 files in other folders)
