[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "resume-agent-template-engine"
version = "0.1.0"
description = "A powerful template engine for generating professional resumes and cover letters using LaTeX"
requires-python = ">=3.9"

dependencies = [
    "fastapi>=0.95.0",
    "uvicorn[standard]>=0.22.0",
    "python-multipart>=0.0.6",
    "Pillow>=9.5.0",
    "jinja2>=3.1.2",
    "python-dotenv>=1.0.0",
    "email-validator>=2.1.0",
    "pydantic>=1.10.0,<2.0.0",
    "httpx>=0.24.0",
    "streamlit>=1.24.0",
    "numpy==1.24.3",
    "pandas==2.0.3",
    "PyYAML>=6.0",
    "redis>=5.0.0",
    "hiredis>=2.2.0",
    "aiofiles>=23.2.0",
    "celery>=5.3.0",
    "flower>=2.0.0",
    "gunicorn>=21.2.0",
    "uvloop>=0.19.0",
    "httptools>=0.6.0",
    "weasyprint>=66.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "black>=24.2.0",
    "flake8>=7.0.0",
    "isort>=5.13.0",
    "ruff>=0.1.0",
    "pytest-cov>=4.1.0",
    "pre-commit>=3.3.0",
    "mypy>=1.8.0",
    "pylint>=3.0.0",
    "coverage>=7.4.0",
    "pytest-mock>=3.12.0",
    "requests==2.31.0",
    "psutil>=5.9.0",
    "rich>=14.2.0",
    "httpx>=0.28.1",
]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--verbose"
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
